--- a/views/home.html
+++ b/views/home.html
@@ -1,97 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
 </head>
 <body>
+    <header>
+        <div>
+            <img src="/img/logo-mercado-liebre.svg" alt="">  
+            <input type="text" name="search" id="search" placeholder="Buscar productos">        
+            <button><i class="fas fa-search"></i></button>
+            
+        </div>
+        <div class="text-center"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p></div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Tiendas Oficiales</a></li>
+                    <li><a href="">Vender</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <ul>
+                    <li><a href="">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+                    <li><a href="">Ingresa <i class="fas fa-sign-out-alt"></i></a></li>
+                    <li><a href="">Mis Compras <i class="fas fa-bars"></i></a></li>
+                </ul>
+            </nav>
+        </div> 
+        <div class="text-center"><button class="colorBlue"><i class="fas fa-align-justify"></i></button></div>       
+    </header>
     <div>
-        <img src="/img/logo-mercado-liebre.svg" alt="">  
-        <input type="text" name="search" id="search" placeholder="Buscar productos">        
-    </div>
-    <div><p>Compra en cuotas y sin tarjeta de crédito</p></div>
-    <div>
-        <ul>
-            <li><a href="">Ofertas</a></li>
-            <li><a href="">Tiendas Oficiales</a></li>
-            <li><a href="">Vender</a></li>
-            <li><a href="">Ayuda</a></li>
-        </ul>
-        <ul>
-            <li><a href="">Crea tu cuenta</a></li>
-            <li><a href="">Ingresa</a></li>
-            <li><a href="">Mis Compras</a></li>
-        </ul>
-    </div>
-    <div><img src="/img/img-home-banner.jpg" alt=""></div>
-    <div>
-        <h4>Basado en tu última vista</h4>
+        <div><img src="/img/img-home-banner.jpg" alt=""></div>
+        <h4 class="titular">Basado en tu última vista</h4>
         <div>
             <img src="/img/img-cafetera-moulinex.jpg" alt="">
-            <p>$6.770</p>
-            <p>40% OFF</p>
-            <p><b>Cafetera Moulinex</b></p>
+            <p class="precio">$6.770</p>
+            <p class="descuento">40% OFF</p>
+            <p class="descripcion"><b>Cafetera Moulinex</b></p>
         </div>
         <div>
             <img src="/img/img-macbook-pro-2019.jpg" alt="">
-            <p>$230.000</p>
-            <p>20% OFF</p>
-            <p><b>MacBook Pro 2019</b></p>
+            <p class="precio">$230.000</p>
+            <p class="descuento">20% OFF</p>
+            <p class="descripcion"><b>MacBook Pro 2019</b></p>
         </div>
         <div>
             <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
-            <p>$70.500</p>
-            <p>10% OFF</p>
-            <p><b>Samsung Galaxy S10</b></p>
+            <p class="precio">$70.500</p>
+            <p class="descuento">10% OFF</p>
+            <p class="descripcion"><b>Samsung Galaxy S10</b></p>
         </div>
         <div>
             <img src="/img/img-tv-samsung-smart.jpg" alt="">
-            <p>$23.200</p>
-            <p>5% OFF</p>
-            <p><b>SmartTv Samsung 43"</b></p>
+            <p class="precio">$23.200</p>
+            <p class="descuento">5% OFF</p>
+            <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
         </div>
     </div>
     <div>
         <h4>Ofertas</h4>
         <div>
             <img src="/img/img-cafetera-moulinex.jpg" alt="">
-            <p>$6.770</p>
-            <p>40% OFF</p>
-            <p><b>Cafetera Moulinex</b></p>
+            <p class="precio">$6.770</p>
+            <p class="descuento">40% OFF</p>
+            <p class="descripcion"><b>Cafetera Moulinex</b></p>
         </div>
         <div>
             <img src="/img/img-macbook-pro-2019.jpg" alt="">
-            <p>$230.000</p>
-            <p>20% OFF</p>
-            <p><b>MacBook Pro 2019</b></p>
+            <p class="precio">$230.000</p>
+            <p class="descuento">20% OFF</p>
+            <p class="descripcion"><b>MacBook Pro 2019</b></p>
         </div>
         <div>
             <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
-            <p>$70.500</p>
-            <p>10% OFF</p>
-            <p><b>Samsung Galaxy S10</b></p>
+            <p class="precio">$70.500</p>
+            <p class="descuento">10% OFF</p>
+            <p class="descripcion"><b>Samsung Galaxy S10</b></p>
         </div>
         <div>
             <img src="/img/img-tv-samsung-smart.jpg" alt="">
-            <p>$23.200</p>
-            <p>5% OFF</p>
-            <p><b>SmartTv Samsung 43"</b></p>
+            <p class="precio">$23.200</p>
+            <p class="descuento">5% OFF</p>
+            <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
         </div>
     </div>
-    <footer>
+    <footer class="text-center">
         <div>
+            <i class="fas fa-credit-card"></i>
             <p><b>Paga con tarjeta o en efectivo</b></p>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </div>
         <div>
+            <i class="fas fa-gift"></i>
             <p><b>Envío gratis desde $ 2.500</b></p>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </div>
         <div>
+            <i class="fas fa-user-shield"></i>
             <p><b>Seguridad, de principio a fin</b></p>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
