--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
             <button><i class="fas fa-search"></i></button>
             
         </div>
-        <div class="text-center"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p></div>
+        <div class="text-center fontBlue"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p></div>
         <div>
             <nav>
                 <ul>
@@ -34,67 +34,93 @@
                 <ul>
                     <li><a href="">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
                     <li><a href="">Ingresa <i class="fas fa-sign-out-alt"></i></a></li>
-                    <li><a href="">Mis Compras <i class="fas fa-bars"></i></a></li>
+                    <li><a href="">Mis Compras <i class="fas "></i></a></li>
                 </ul>
             </nav>
         </div> 
-        <div class="text-center"><button class="colorBlue"><i class="fas fa-align-justify"></i></button></div>       
+        <div class="text-center"><i class="fas fa-bars"></i></div>       
     </header>
-    <div>
-        <div><img src="/img/img-home-banner.jpg" alt=""></div>
-        <h4 class="titular">Basado en tu última vista</h4>
+    <main>
         <div>
-            <img src="/img/img-cafetera-moulinex.jpg" alt="">
-            <p class="precio">$6.770</p>
-            <p class="descuento">40% OFF</p>
-            <p class="descripcion"><b>Cafetera Moulinex</b></p>
+            <div><img class="ofert" src="/img/img-home-banner.jpg" alt=""></div>
+            <h4 class="titular">Basado en tu última vista</h4>
+            <article>
+                <img src="/img/img-cafetera-moulinex.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <p class="descripcion"><b>Cafetera Moulinex</b></p>
+                </div>                
+            </article>
+            <article>
+                <img src="/img/img-macbook-pro-2019.jpg" alt="">
+                <div>   
+                    <i class="fas fa-truck"></i>                 
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <p class="descripcion"><b>MacBook Pro 2019</b></p>
+                </div>                
+            </article>
+            <article>
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <p class="descripcion"><b>Samsung Galaxy S10</b></p>
+                </div>                
+            </div>
+            <article>
+                <img src="/img/img-tv-samsung-smart.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
+                </div>                
+            </article>
         </div>
         <div>
-            <img src="/img/img-macbook-pro-2019.jpg" alt="">
-            <p class="precio">$230.000</p>
-            <p class="descuento">20% OFF</p>
-            <p class="descripcion"><b>MacBook Pro 2019</b></p>
+            <h4 class="titleOfertas">Ofertas</h4>
+            <article>
+                <img src="/img/img-cafetera-moulinex.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <p class="descripcion"><b>Cafetera Moulinex</b></p>
+                </div>
+            </article>
+            <article>
+                <img src="/img/img-macbook-pro-2019.jpg" alt="">
+                <div>                    
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <p class="descripcion"><b>MacBook Pro 2019</b></p>
+                </div>                
+            </article>
+            <article>
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <p class="descripcion"><b>Samsung Galaxy S10</b></p> 
+                </div>
+            </article>
+            <article>
+                <img src="/img/img-tv-samsung-smart.jpg" alt="">
+                <div>
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
+                </div>
+            </article>
         </div>
-        <div>
-            <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
-            <p class="precio">$70.500</p>
-            <p class="descuento">10% OFF</p>
-            <p class="descripcion"><b>Samsung Galaxy S10</b></p>
-        </div>
-        <div>
-            <img src="/img/img-tv-samsung-smart.jpg" alt="">
-            <p class="precio">$23.200</p>
-            <p class="descuento">5% OFF</p>
-            <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
-        </div>
-    </div>
-    <div>
-        <h4>Ofertas</h4>
-        <div>
-            <img src="/img/img-cafetera-moulinex.jpg" alt="">
-            <p class="precio">$6.770</p>
-            <p class="descuento">40% OFF</p>
-            <p class="descripcion"><b>Cafetera Moulinex</b></p>
-        </div>
-        <div>
-            <img src="/img/img-macbook-pro-2019.jpg" alt="">
-            <p class="precio">$230.000</p>
-            <p class="descuento">20% OFF</p>
-            <p class="descripcion"><b>MacBook Pro 2019</b></p>
-        </div>
-        <div>
-            <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
-            <p class="precio">$70.500</p>
-            <p class="descuento">10% OFF</p>
-            <p class="descripcion"><b>Samsung Galaxy S10</b></p>
-        </div>
-        <div>
-            <img src="/img/img-tv-samsung-smart.jpg" alt="">
-            <p class="precio">$23.200</p>
-            <p class="descuento">5% OFF</p>
-            <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
-        </div>
-    </div>
+    </main>
     <footer class="text-center">
         <div>
             <i class="fas fa-credit-card"></i>
