--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,7 @@ header{
 .descripcion{
     font-size: 16px;
     color:#666;
+    display:none;
 }
 
 .titleOfertas{
@@ -83,3 +84,25 @@ img{
     margin-bottom: 1em;
 }
 
+nav{
+    display:none;
+}
+@media(min-width:361px){
+    .descripcion{
+        display:initial;
+    }
+    .button-nav{
+        display:none;
+    }
+
+    nav{
+        display:initial;
+    }
+}
+
+@media(min-width:769){
+    *{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    
+}
