--- a/views/home.html
+++ b/views/home.html
@@ -38,7 +38,7 @@
                 </ul>
             </nav>
         </div> 
-        <div class="text-center"><i class="fas fa-bars"></i></div>       
+        <div class="text-center button-nav"><i class="fas fa-bars"></i></div>       
     </header>
     <main>
         <div>
