--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,6 @@
     margin: 0;
 }
 
-
 header{
     background-color: #EAC926;
     width: 100%;
@@ -18,16 +17,19 @@ header{
 
 .precio{
     font-size: 18px;
+    width: 30%;
 }
 
 .descuento{
     font-size:16px;
     color: #39b54a;
+    width: 70%;
 }
 .descripcion{
     font-size: 16px;
     color:#666;
     display:none;
+    margin-left: 4%;
 }
 
 .titleOfertas{
@@ -52,10 +54,15 @@ main{
 
 article{
     margin: 10px;
+    background-color: white;
 }
-article div{
+
+article div {
     border-top: 1px solid #ebebeb;
-    padding: 15px
+    padding: 15px;
+}
+article div div{   
+    display: flex;
 }
 
 .ofert{
@@ -66,13 +73,18 @@ img{
     width: 100%;
 }
 
+
 .fa-truck{
     margin: 0.5em;
     color: #39b54a;
     padding: 0.4em;
     border: solid 2px #39b54a;
     border-radius: 50%;
+    order: 1;
+    position: relative;
+    bottom: 64px;
 }
+
 
 .fa-bars{
     color: #ffffff;
@@ -87,7 +99,16 @@ img{
 nav{
     display:none;
 }
-@media(min-width:361px){
+@media(min-width:361px ){
+    main div{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    article{        
+        max-width: 44%;
+        
+    }
     .descripcion{
         display:initial;
     }
@@ -100,9 +121,13 @@ nav{
     }
 }
 
-@media(min-width:769){
-    *{
+@media(min-width:769px){
+    *{        
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    article{        
+        max-width: 22%;
     }
     
 }
