--- a/views/home.html
+++ b/views/home.html
@@ -41,44 +41,53 @@
         <div class="text-center button-nav"><i class="fas fa-bars"></i></div>       
     </header>
     <main>
-        <div>
-            <div><img class="ofert" src="/img/img-home-banner.jpg" alt=""></div>
-            <h4 class="titular">Basado en tu última vista</h4>
+        <div><img class="ofert" src="/img/img-home-banner.jpg" alt=""></div>
+        <h4 class="titular">Basado en tu última vista</h4>
+        <div>   
             <article>
                 <img src="/img/img-cafetera-moulinex.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$6.770</p>
-                    <p class="descuento">40% OFF</p>
-                    <p class="descripcion"><b>Cafetera Moulinex</b></p>
-                </div>                
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p><br>  
+                    </div>                     
+                    <p class="descripcion"><b>Cafetera Moulinex</b></p>                   
+                </div> 
+                            
             </article>
             <article>
                 <img src="/img/img-macbook-pro-2019.jpg" alt="">
-                <div>   
-                    <i class="fas fa-truck"></i>                 
-                    <p class="precio">$230.000</p>
-                    <p class="descuento">20% OFF</p>
+                <div>             
+                    <div>
+                        <i class="fas fa-truck"></i>              
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                    </div>
                     <p class="descripcion"><b>MacBook Pro 2019</b></p>
                 </div>                
             </article>
             <article>
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$70.500</p>
-                    <p class="descuento">10% OFF</p>
-                    <p class="descripcion"><b>Samsung Galaxy S10</b></p>
-                </div>                
-            </div>
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>                    
+                    </div>     
+                    <p class="descripcion"><b>Samsung Galaxy S10</b></p>   
+                </div>                     
+            </article>
             <article>
                 <img src="/img/img-tv-samsung-smart.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$23.200</p>
-                    <p class="descuento">5% OFF</p>
-                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
-                </div>                
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>     
+                    </div>       
+                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>                              
+                </div>                              
             </article>
         </div>
         <div>
@@ -86,38 +95,46 @@
             <article>
                 <img src="/img/img-cafetera-moulinex.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$6.770</p>
-                    <p class="descuento">40% OFF</p>
-                    <p class="descripcion"><b>Cafetera Moulinex</b></p>
-                </div>
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p> 
+                    </div>  
+                    <p class="descripcion"><b>Cafetera Moulinex</b></p>                                     
+                </div>                
             </article>
             <article>
                 <img src="/img/img-macbook-pro-2019.jpg" alt="">
-                <div>                    
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$230.000</p>
-                    <p class="descuento">20% OFF</p>
-                    <p class="descripcion"><b>MacBook Pro 2019</b></p>
-                </div>                
+                <div> 
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>    
+                    </div>      
+                    <p class="descripcion"><b>MacBook Pro 2019</b></p>         
+                </div>                             
             </article>
             <article>
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$70.500</p>
-                    <p class="descuento">10% OFF</p>
-                    <p class="descripcion"><b>Samsung Galaxy S10</b></p> 
-                </div>
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>  
+                    </div>
+                    <p class="descripcion"><b>Samsung Galaxy S10</b></p>         
+                </div>                
             </article>
             <article>
                 <img src="/img/img-tv-samsung-smart.jpg" alt="">
                 <div>
-                    <i class="fas fa-truck"></i>
-                    <p class="precio">$23.200</p>
-                    <p class="descuento">5% OFF</p>
-                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>
-                </div>
+                    <div>
+                        <i class="fas fa-truck"></i>
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>  
+                    </div>
+                    <p class="descripcion"><b>SmartTv Samsung 43"</b></p>           
+                </div>                
             </article>
         </div>
     </main>
