--- a/views/home.html
+++ b/views/home.html
@@ -14,14 +14,16 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="logo-buscador">
             <img src="/img/logo-mercado-liebre.svg" alt="">  
-            <input type="text" name="search" id="search" placeholder="Buscar productos">        
-            <button><i class="fas fa-search"></i></button>
-            
+            <div>
+                <input type="text" name="search" id="search" placeholder="Buscar productos">        
+            <i class="fas fa-search"></i>
+            </div>
+            <p class="fontBlue"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </div>
-        <div class="text-center fontBlue"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p></div>
-        <div>
+        
+        <div class="nav">
             <nav>
                 <ul>
                     <li><a href="">Ofertas</a></li>
@@ -81,7 +83,7 @@
                 </div>           
             </article>
         </div>
-        <h4 class="titleOfertas">Ofertas</h4>
+        <h4 class="titleOfertas titular">Ofertas</h4>
         <div>            
             <article>
                 <img src="/img/img-cafetera-moulinex.jpg" alt="">
