--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,7 +67,7 @@ p{
     font-size: 12px;
 }
 
-input{
+.inputSearch{
     width: 80%;
 }
 
@@ -86,10 +86,17 @@ input{
     color: #39b54a;
     width: 70%;
 }
-.descripcion{
+.descripcion{    
+    position: absolute;
+    top: 34px;
     font-size: 16px;
     color:#666;
     display:none;
+}
+
+article div i:hover{
+    transform: rotateZ(-90deg);
+    transition: 1s;
 }
 
 .titleOfertas{
@@ -115,6 +122,16 @@ main{
 article{
     margin: 10px;
     background-color: white;
+}
+
+article{
+    transition: 300ms;
+    box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.40);
+}
+
+article:hover .descripcion{
+    display: initial;
+    transition: 2s;
 }
 
 article div {
@@ -156,7 +173,76 @@ img{
 nav{
     display:none;
 }
+
+footer{
+    background-color: white;
+}
+
+/** register */
+body{
+    background-color:#ebebeb;
+}
+.containerForm{
+    width: 70%;
+    margin: 10px;
+    padding: 20px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+}
+
+form{
+    margin: auto;
+    width: 200px;
+}
+
+form > div > input{
+    border-radius: 7px;
+    padding: 5px;
+    border: 1px solid gray;
+    background-color:white;
+    width: 100%;
+}
+
+form div{
+    margin:20px
+}
+
+.button{
+    border-radius: 7px;
+    padding: 5px;
+    width:48%;
+}
+
+.button-blue:hover{
+    background: #0022AA;
+}
+
+.button-blue {
+    background-color:#1259c3;
+    color: white;
+}
+
+.button-red {
+    background-color:red;
+    color: white;
+}
+
 @media(min-width:361px ){
+    footer{
+        display:flex;
+        flex-wrap: wrap;
+        padding:10px;
+    }
+    footer div{
+        width: 33%;
+    }
+    
+    .copyright{
+        margin-top:10px;
+        width: 100%;
+    }
+    
     main div{
         display: flex;
         flex-wrap: wrap;
@@ -167,6 +253,7 @@ nav{
         max-width: 44%;
     }
     .descripcion{
+        position: revert;
         display:initial;
         width: 100%;
     }
@@ -198,6 +285,11 @@ nav{
     header div p{
         width: 35%;
         font-size: 12px;
+    }
+
+    form{
+        margin: auto;
+        width: 400px;
     }
     
 }
