--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
         <div class="logo-buscador">
             <img src="/img/logo-mercado-liebre.svg" alt="">  
             <div>
-                <input type="text" name="search" id="search" placeholder="Buscar productos">        
+                <input class="inputSearch" type="text" name="search" id="search" placeholder="Buscar productos">        
             <i class="fas fa-search"></i>
             </div>
             <p class="fontBlue"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
@@ -34,8 +34,8 @@
             </nav>
             <nav>
                 <ul>
-                    <li><a href="">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
-                    <li><a href="">Ingresa <i class="fas fa-sign-out-alt"></i></a></li>
+                    <li><a href="/register">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+                    <li><a href="/login">Ingresa <i class="fas fa-sign-out-alt"></i></a></li>
                     <li><a href="">Mis Compras <i class="fas "></i></a></li>
                 </ul>
             </nav>
@@ -142,7 +142,7 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </div>
-        <div>
+        <div class="copyright">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </div>
     </footer>
