--- a/views/home.html
+++ b/views/home.html
@@ -17,8 +17,12 @@
         <div class="logo-buscador">
             <img src="/img/logo-mercado-liebre.svg" alt="">  
             <div>
-                <input class="inputSearch" type="text" name="search" id="search" placeholder="Buscar productos">        
-            <i class="fas fa-search"></i>
+                <form action="/">
+                    <input class="inputSearch" type="text" name="search" id="search" placeholder="Buscar productos">        
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>               
             </div>
             <p class="fontBlue"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </div>
@@ -45,7 +49,7 @@
     <main>
         <div><img class="ofert" src="/img/img-home-banner.jpg" alt=""></div>
         <h4 class="titular">Basado en tu última vista</h4>
-        <div>   
+        <div class="containerProducts">   
             <article>
                 <img src="/img/img-cafetera-moulinex.jpg" alt="">                
                 <div>
