--- a/views/register.html
+++ b/views/register.html
@@ -16,9 +16,13 @@
     <header>
         <div class="logo-buscador">
             <img src="/img/logo-mercado-liebre.svg" alt="">  
-            <div>               
-                <input class="inputSearch" type="text" name="search" id="search" placeholder="Buscar productos">        
-                <i class="fas fa-search"></i>               
+            <div>
+                <form action="/">
+                    <input class="inputSearch" type="text" name="search" id="search" placeholder="Buscar productos">        
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>               
             </div>
             <p class="fontBlue"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </div>
