--- a/views/home.html
+++ b/views/home.html
@@ -131,19 +131,19 @@
         <div>
             <i class="fas fa-credit-card"></i>
             <p class="text-center"><b>Paga con tarjeta o en efectivo</b></p>
-            <p class="text-justify">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            <p class="text-footer-p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </div>
         <div>
             <i class="fas fa-gift"></i>
             <p class="text-center"><b>Envío gratis desde $ 2.500</b></p>
-            <p class="text-justify">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            <p class="text-footer-p">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </div>
         <div>
             <i class="fas fa-user-shield"></i>
             <p class="text-center"><b>Seguridad, de principio a fin</b></p>
-            <p class="text-justify">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            <p class="text-footer-p">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </div>
         <div class="copyright">
